--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+
+
+
+
+* {
+    margin: 0;
+}
+
+html, body{
+    font-family: 'Titillium Web', sans-serif;
+    height: 100%;
+}
